// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ReportDetails /> panel render 5 hours recurring component 1`] = `
<div
  class="euiPage euiPage--paddingMedium euiPage--grow"
>
  <div
    class="euiPageBody euiPageBody--borderRadiusNone"
  >
    <h1
      class="euiTitle euiTitle--large"
    >
      Report details
    </h1>
    <div
      class="euiSpacer euiSpacer--m"
    />
    <div
      class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPageContent"
      role="main"
    >
      <header
        class="euiPageHeader euiPageHeader--responsive euiPageHeader--center"
      >
        <div
          class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
        >
          <div
            class="euiFlexItem"
          >
            <div
              class="euiPageHeaderSection"
            >
              <h2
                class="euiTitle euiTitle--medium"
              >
                test create report definition trigger
              </h2>
            </div>
          </div>
        </div>
      </header>
      <hr
        class="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginLarge"
      />
      <h3
        class="euiTitle euiTitle--medium"
      >
        Report Settings
      </h3>
      <div
        class="euiSpacer euiSpacer--l"
      />
      <div
        class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
      >
        <div
          class="euiFlexItem"
        >
          <dl
            class="euiDescriptionList euiDescriptionList--row"
          >
            <dt
              class="euiDescriptionList__title"
            >
              Name
            </dt>
            <dd
              class="euiDescriptionList__description"
            >
              test create report definition trigger
            </dd>
          </dl>
        </div>
        <div
          class="euiFlexItem"
        >
          <dl
            class="euiDescriptionList euiDescriptionList--row"
          >
            <dt
              class="euiDescriptionList__title"
            >
              Description
            </dt>
            <dd
              class="euiDescriptionList__description"
            >
              —
            </dd>
          </dl>
        </div>
        <div
          class="euiFlexItem"
        >
          <dl
            class="euiDescriptionList euiDescriptionList--row"
          >
            <dt
              class="euiDescriptionList__title"
            >
              Created
            </dt>
            <dd
              class="euiDescriptionList__description"
            >
              —
            </dd>
          </dl>
        </div>
        <div
          class="euiFlexItem"
        >
          <dl
            class="euiDescriptionList euiDescriptionList--row"
          >
            <dt
              class="euiDescriptionList__title"
            >
              Last updated
            </dt>
            <dd
              class="euiDescriptionList__description"
            >
              —
            </dd>
          </dl>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--l"
      />
      <div
        class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
      >
        <div
          class="euiFlexItem"
        >
          <dl
            class="euiDescriptionList euiDescriptionList--row"
          >
            <dt
              class="euiDescriptionList__title"
            >
              Source
            </dt>
            <dd
              class="euiDescriptionList__description"
            >
              <a
                class="euiLink euiLink--primary"
                href="http://localhost:5601/app/dashboards#/view/7adfa750-4c81-11e8-b3d7-01146121b73d?_g=(time:(from:'2020-10-23T20:53:35.315Z',to:'2020-10-23T21:23:35.316Z'))"
                id="reportDetailsSourceURL"
                rel="noopener noreferrer"
                target="_blank"
              >
                Dashboard
                <svg
                  aria-label="External link"
                  class="euiIcon euiIcon--small euiLink__externalIcon"
                  focusable="false"
                  height="16"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M13 8.5a.5.5 0 1 1 1 0V12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h3.5a.5.5 0 0 1 0 1H4a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V8.5Zm-5.12.339a.5.5 0 1 1-.706-.707L13.305 2H10.5a.5.5 0 1 1 0-1H14a1 1 0 0 1 1 1v3.5a.5.5 0 1 1-1 0V2.72L7.88 8.838Z"
                  />
                </svg>
                <span
                  class="euiScreenReaderOnly"
                >
                  (opens in a new tab or window)
                </span>
              </a>
            </dd>
          </dl>
        </div>
        <div
          class="euiFlexItem"
        >
          <dl
            class="euiDescriptionList euiDescriptionList--row"
          >
            <dt
              class="euiDescriptionList__title"
            >
              Time period
            </dt>
            <dd
              class="euiDescriptionList__description"
            >
              Invalid Date -&gt; 10/23/2020, 8:53:35 PM
            </dd>
          </dl>
        </div>
        <div
          class="euiFlexItem"
        >
          <dl
            class="euiDescriptionList euiDescriptionList--row"
          >
            <dt
              class="euiDescriptionList__title"
            >
              File format
            </dt>
            <dd
              class="euiDescriptionList__description"
            >
              <button
                class="euiLink euiLink--primary"
                type="button"
              >
                undefined 
                <svg
                  aria-hidden="true"
                  class="euiIcon euiIcon--medium"
                  focusable="false"
                  height="16"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m9 10.114 1.85-1.943a.52.52 0 0 1 .77 0c.214.228.214.6 0 .829l-1.95 2.05a1.552 1.552 0 0 1-2.31 0L5.41 9a.617.617 0 0 1 0-.829.52.52 0 0 1 .77 0L8 10.082V1.556C8 1.249 8.224 1 8.5 1s.5.249.5.556v8.558ZM4.18 6a.993.993 0 0 0-.972.804l-1.189 6A.995.995 0 0 0 2.991 14h11.018a1 1 0 0 0 .972-1.196l-1.19-6a.993.993 0 0 0-.97-.804H4.18ZM6 5v1h5V5h1.825c.946 0 1.76.673 1.946 1.608l1.19 6A2 2 0 0 1 14.016 15H2.984a1.992 1.992 0 0 1-1.945-2.392l1.19-6C2.414 5.673 3.229 5 4.174 5H6Z"
                  />
                </svg>
              </button>
            </dd>
          </dl>
        </div>
        <div
          class="euiFlexItem"
        >
          <dl
            class="euiDescriptionList euiDescriptionList--row"
          >
            <dt
              class="euiDescriptionList__title"
            >
              State
            </dt>
            <dd
              class="euiDescriptionList__description"
            />
          </dl>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--l"
      />
      <div
        class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
      >
        <div
          class="euiFlexItem"
        >
          <dl
            class="euiDescriptionList euiDescriptionList--row"
          >
            <dt
              class="euiDescriptionList__title"
            >
              Report header
            </dt>
            <dd
              class="euiDescriptionList__description"
            >
              <p>
                —
              </p>
            </dd>
          </dl>
        </div>
        <div
          class="euiFlexItem"
        >
          <dl
            class="euiDescriptionList euiDescriptionList--row"
          >
            <dt
              class="euiDescriptionList__title"
            >
              Report footer
            </dt>
            <dd
              class="euiDescriptionList__description"
            >
              <p>
                —
              </p>
            </dd>
          </dl>
        </div>
        <div
          class="euiFlexItem"
        >
          <dl
            class="euiDescriptionList euiDescriptionList--row"
          >
            <dt
              class="euiDescriptionList__title"
            />
            <dd
              class="euiDescriptionList__description"
            />
          </dl>
        </div>
        <div
          class="euiFlexItem"
        >
          <dl
            class="euiDescriptionList euiDescriptionList--row"
          >
            <dt
              class="euiDescriptionList__title"
            />
            <dd
              class="euiDescriptionList__description"
            />
          </dl>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--l"
      />
      <div
        class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
      >
        <div
          class="euiFlexItem"
        >
          <dl
            class="euiDescriptionList euiDescriptionList--row"
          >
            <dt
              class="euiDescriptionList__title"
            >
              Report trigger
            </dt>
            <dd
              class="euiDescriptionList__description"
            >
              Schedule
            </dd>
          </dl>
        </div>
        <div
          class="euiFlexItem"
        >
          <dl
            class="euiDescriptionList euiDescriptionList--row"
          >
            <dt
              class="euiDescriptionList__title"
            >
              Schedule type
            </dt>
            <dd
              class="euiDescriptionList__description"
            >
              Recurring
            </dd>
          </dl>
        </div>
        <div
          class="euiFlexItem"
        >
          <dl
            class="euiDescriptionList euiDescriptionList--row"
          >
            <dt
              class="euiDescriptionList__title"
            >
              Schedule details
            </dt>
            <dd
              class="euiDescriptionList__description"
            >
              —
            </dd>
          </dl>
        </div>
        <div
          class="euiFlexItem"
        >
          <dl
            class="euiDescriptionList euiDescriptionList--row"
          >
            <dt
              class="euiDescriptionList__title"
            />
            <dd
              class="euiDescriptionList__description"
            />
          </dl>
        </div>
      </div>
    </div>
    <div
      aria-live="polite"
      class="euiGlobalToastList euiGlobalToastList--right"
      role="region"
    />
  </div>
</div>
`;

exports[`<ReportDetails /> panel render on-demand component 1`] = `
<div
  class="euiPage euiPage--paddingMedium euiPage--grow"
>
  <div
    class="euiPageBody euiPageBody--borderRadiusNone"
  >
    <h1
      class="euiTitle euiTitle--large"
    >
      Report details
    </h1>
    <div
      class="euiSpacer euiSpacer--m"
    />
    <div
      class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPageContent"
      role="main"
    >
      <header
        class="euiPageHeader euiPageHeader--responsive euiPageHeader--center"
      >
        <div
          class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
        >
          <div
            class="euiFlexItem"
          >
            <div
              class="euiPageHeaderSection"
            >
              <h2
                class="euiTitle euiTitle--medium"
              >
                test create report definition trigger
              </h2>
            </div>
          </div>
        </div>
      </header>
      <hr
        class="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginLarge"
      />
      <h3
        class="euiTitle euiTitle--medium"
      >
        Report Settings
      </h3>
      <div
        class="euiSpacer euiSpacer--l"
      />
      <div
        class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
      >
        <div
          class="euiFlexItem"
        >
          <dl
            class="euiDescriptionList euiDescriptionList--row"
          >
            <dt
              class="euiDescriptionList__title"
            >
              Name
            </dt>
            <dd
              class="euiDescriptionList__description"
            >
              test create report definition trigger
            </dd>
          </dl>
        </div>
        <div
          class="euiFlexItem"
        >
          <dl
            class="euiDescriptionList euiDescriptionList--row"
          >
            <dt
              class="euiDescriptionList__title"
            >
              Description
            </dt>
            <dd
              class="euiDescriptionList__description"
            >
              —
            </dd>
          </dl>
        </div>
        <div
          class="euiFlexItem"
        >
          <dl
            class="euiDescriptionList euiDescriptionList--row"
          >
            <dt
              class="euiDescriptionList__title"
            >
              Created
            </dt>
            <dd
              class="euiDescriptionList__description"
            >
              —
            </dd>
          </dl>
        </div>
        <div
          class="euiFlexItem"
        >
          <dl
            class="euiDescriptionList euiDescriptionList--row"
          >
            <dt
              class="euiDescriptionList__title"
            >
              Last updated
            </dt>
            <dd
              class="euiDescriptionList__description"
            >
              —
            </dd>
          </dl>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--l"
      />
      <div
        class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
      >
        <div
          class="euiFlexItem"
        >
          <dl
            class="euiDescriptionList euiDescriptionList--row"
          >
            <dt
              class="euiDescriptionList__title"
            >
              Source
            </dt>
            <dd
              class="euiDescriptionList__description"
            >
              <a
                class="euiLink euiLink--primary"
                href="http://localhost:5601/app/dashboards#/view/7adfa750-4c81-11e8-b3d7-01146121b73d?_g=(time:(from:'2020-10-23T20:53:35.315Z',to:'2020-10-23T21:23:35.316Z'))"
                id="reportDetailsSourceURL"
                rel="noopener noreferrer"
                target="_blank"
              >
                Dashboard
                <svg
                  aria-hidden="true"
                  aria-label="External link"
                  class="euiIcon euiIcon--small euiIcon-isLoading euiLink__externalIcon"
                  focusable="false"
                  height="16"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                  />
                </svg>
                <span
                  class="euiScreenReaderOnly"
                >
                  (opens in a new tab or window)
                </span>
              </a>
            </dd>
          </dl>
        </div>
        <div
          class="euiFlexItem"
        >
          <dl
            class="euiDescriptionList euiDescriptionList--row"
          >
            <dt
              class="euiDescriptionList__title"
            >
              Time period
            </dt>
            <dd
              class="euiDescriptionList__description"
            >
              Invalid Date -&gt; 10/23/2020, 8:53:35 PM
            </dd>
          </dl>
        </div>
        <div
          class="euiFlexItem"
        >
          <dl
            class="euiDescriptionList euiDescriptionList--row"
          >
            <dt
              class="euiDescriptionList__title"
            >
              File format
            </dt>
            <dd
              class="euiDescriptionList__description"
            >
              <button
                class="euiLink euiLink--primary"
                type="button"
              >
                undefined 
                <svg
                  aria-hidden="true"
                  class="euiIcon euiIcon--medium euiIcon-isLoading"
                  focusable="false"
                  height="16"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                  />
                </svg>
              </button>
            </dd>
          </dl>
        </div>
        <div
          class="euiFlexItem"
        >
          <dl
            class="euiDescriptionList euiDescriptionList--row"
          >
            <dt
              class="euiDescriptionList__title"
            >
              State
            </dt>
            <dd
              class="euiDescriptionList__description"
            />
          </dl>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--l"
      />
      <div
        class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
      >
        <div
          class="euiFlexItem"
        >
          <dl
            class="euiDescriptionList euiDescriptionList--row"
          >
            <dt
              class="euiDescriptionList__title"
            >
              Report header
            </dt>
            <dd
              class="euiDescriptionList__description"
            >
              <p>
                —
              </p>
            </dd>
          </dl>
        </div>
        <div
          class="euiFlexItem"
        >
          <dl
            class="euiDescriptionList euiDescriptionList--row"
          >
            <dt
              class="euiDescriptionList__title"
            >
              Report footer
            </dt>
            <dd
              class="euiDescriptionList__description"
            >
              <p>
                —
              </p>
            </dd>
          </dl>
        </div>
        <div
          class="euiFlexItem"
        >
          <dl
            class="euiDescriptionList euiDescriptionList--row"
          >
            <dt
              class="euiDescriptionList__title"
            />
            <dd
              class="euiDescriptionList__description"
            />
          </dl>
        </div>
        <div
          class="euiFlexItem"
        >
          <dl
            class="euiDescriptionList euiDescriptionList--row"
          >
            <dt
              class="euiDescriptionList__title"
            />
            <dd
              class="euiDescriptionList__description"
            />
          </dl>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--l"
      />
      <div
        class="euiFlexItem"
      >
        <dl
          class="euiDescriptionList euiDescriptionList--row"
        >
          <dt
            class="euiDescriptionList__title"
          >
            Report trigger
          </dt>
          <dd
            class="euiDescriptionList__description"
          >
            On demand
          </dd>
        </dl>
      </div>
    </div>
    <div
      aria-live="polite"
      class="euiGlobalToastList euiGlobalToastList--right"
      role="region"
    />
  </div>
</div>
`;
